--- a/DailyNews/Base.lproj/Main.storyboard
+++ b/DailyNews/Base.lproj/Main.storyboard
@@ -55,26 +55,27 @@
         <scene sceneID="Pnc-de-uZS">
             <objects>
                 <tableViewController id="shh-Ps-kWZ" customClass="ArticlesViewController" customModule="DailyNews" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="nhl-2O-8zZ">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="nhl-2O-8zZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="articleCell" id="FVo-Ji-a1Z" customClass="ArticleCell" customModule="DailyNews" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="100"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FVo-Ji-a1Z" id="Ehz-ku-aDz">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="89.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i6Q-x8-5CI">
-                                            <rect key="frame" x="108" y="11" width="247" height="20.5"/>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What's On TV: Chelsea Handler and Alec Baldwin" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i6Q-x8-5CI">
+                                            <rect key="frame" x="97.5" y="11" width="257.5" height="38.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sEX-v0-0X2">
-                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <rect key="frame" x="4" y="4" width="81.5" height="81.5"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="sEX-v0-0X2" secondAttribute="height" multiplier="1:1" id="Ag6-6f-lbo"/>
                                             </constraints>
@@ -82,11 +83,11 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="i6Q-x8-5CI" secondAttribute="bottom" constant="11" id="7aM-D5-eEM"/>
-                                        <constraint firstItem="sEX-v0-0X2" firstAttribute="top" secondItem="Ehz-ku-aDz" secondAttribute="top" id="9TE-ln-bJB"/>
-                                        <constraint firstAttribute="bottom" secondItem="sEX-v0-0X2" secondAttribute="bottom" constant="-0.5" id="9z0-Ar-3LR"/>
-                                        <constraint firstItem="i6Q-x8-5CI" firstAttribute="leading" secondItem="sEX-v0-0X2" secondAttribute="trailing" constant="8" id="AYq-Wu-Fd4"/>
+                                        <constraint firstItem="sEX-v0-0X2" firstAttribute="top" secondItem="Ehz-ku-aDz" secondAttribute="top" constant="4" id="9TE-ln-bJB"/>
+                                        <constraint firstAttribute="bottom" secondItem="sEX-v0-0X2" secondAttribute="bottom" constant="4" id="9z0-Ar-3LR"/>
+                                        <constraint firstItem="i6Q-x8-5CI" firstAttribute="leading" secondItem="sEX-v0-0X2" secondAttribute="trailing" constant="12" id="AYq-Wu-Fd4"/>
                                         <constraint firstItem="i6Q-x8-5CI" firstAttribute="top" secondItem="Ehz-ku-aDz" secondAttribute="top" constant="11" id="IOg-VU-s3a"/>
-                                        <constraint firstItem="sEX-v0-0X2" firstAttribute="leading" secondItem="Ehz-ku-aDz" secondAttribute="leading" id="s1l-Rf-kNu"/>
+                                        <constraint firstItem="sEX-v0-0X2" firstAttribute="leading" secondItem="Ehz-ku-aDz" secondAttribute="leading" constant="4" id="s1l-Rf-kNu"/>
                                         <constraint firstAttribute="trailing" secondItem="i6Q-x8-5CI" secondAttribute="trailing" constant="20" id="uKw-ws-2wg"/>
                                     </constraints>
                                 </tableViewCellContentView>
